--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         </div>
       </div>
       <div class="hero-img">
-        <img src="ChatGPT Image Jun 17, 2025, 10_54_51 PM.png" alt="Dara Tharun" />
+        <img src="IMG_20250820_131213_589.webp" alt="Dara Tharun" />
       </div>
     </div>
   </div>
